--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
+# Custom files and folders
+data
+data/**
+
 # IDEs and editors
 .vscode
 .vscode/**
